Scrolling for sm screen fixed with scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,12 @@ nav#topNav {
     2px 2px 10px rgba(255, 235, 77, 0.5);
 }
 
+.nav-menu-container {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
 ul.nav-menu {
   list-style-type: none;
 }
@@ -359,6 +365,17 @@ ul#primaryMenu > li.nav-item > a.nav-link,
     flex-direction: column;
   }
 
+  .nav-menu-container {
+    display: none;
+    flex-direction: column;
+    max-height: 91vh;
+    overflow-y: auto;
+  }
+
+  .nav-menu-container::-webkit-scrollbar {
+    width: 0px;
+  }
+
   ul#primaryMenu {
     flex-direction: column;
   }
@@ -486,20 +503,12 @@ ul#primaryMenu > li.nav-item > a.nav-link,
     margin-bottom: 1vh;
   }
 
-  ul.nav-menu {
-    display: none !important;
+  #topNavToggleBtn:checked + .nav-menu-container {
+    display: flex;
   }
 
   .subscribe {
-    display: none;
-  }
-
-  #topNavToggleBtn:checked + ul.nav-menu,
-  #topNavToggleBtn:checked ~ .subscribe {
-    display: flex !important;
-  }
-
-  .subscribe {
+    height: 6.5vh;
     justify-content: flex-end;
   }
 }
